# win-move

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  config.toml.example  win-move.exe.manifest
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  clippy.yml  fmt.yml  release-please.yml  semantic-pull-request.yml  test.yml
src/: config.rs  enums.rs  hotkey_action.rs  lib.rs  logic.rs  main.rs  mswindows.rs  structs.rs
src/common/: config.rs  enums.rs  hotkey_action.rs  logic.rs  mod.rs  structs.rs  traits.rs
src/common/action/: maximize_window.rs  minimize_window.rs  move_window.rs  move_window_to_another_screen.rs  resize_window.rs
src/common/calculation/: calculate_window_rect.rs  mod.rs
src/logic/: hotkey_action.rs  logic_main.rs  mod.rs  structs.rs  traits.rs
src/logic/action/: maximize_window.rs  minimize_window.rs  mod.rs  move_window.rs  move_window_to_another_screen.rs  resize_window.rs
src/logic/calculation/: calculate_window_rect.rs
src/windows/: desktop.rs  helpers.rs  hotkey_handler.rs  mod.rs  monitor.rs  system.rs  system_tray.rs  transformation.rs  window.rs
