[package]
name = "win-move"
version = "0.2.0"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jajuojan/win-move"
edition = "2021"

[dependencies.windows]
version = "0.37.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
num = "0.4.0"
enum_primitive = "0.1.1"
