[package]
name = "win-move"
version = "0.2.0"
authors = ["Jani Ojanen <jajuojan@gmail.com>"]
edition = "2021"
readme = "README.md"
description="Move windows on desktop via shortcuts"
repository = "https://github.com/jajuojan/win-move"
license = "MIT"

[dependencies.windows]
version = "0.40.0"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_HiDpi"
]

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies]
num = "0.4.0"
enum_primitive = "0.1.1"

[profile.release]
strip = true
lto = true
codegen-units = 1
